--- a/components/posts/posts.html
+++ b/components/posts/posts.html
@@ -6,12 +6,12 @@
   </div>
 
   <ul class="index">
-    <li ng-repeat="post in posts.page.posts" ng-init="link = (post.key | parseKey)">
-      <a ng-link="post({ id: link })" class="index-link">
+    <li ng-repeat="post in posts.page.posts">
+      <a ng-link="post({ id: post.link })" class="index-link">
         <h2 ng-bind="post.title"></h2>
       </a>
       <div class="post-detail">
-        <span>{{ post.date | parseUrlDate | date:'mediumDate' }} by {{ post.author }}</span>
+        <span>{{ post.date | parseDate | date:'mediumDate' }} by {{ post.author }}</span>
         <ul class="inline-tags">Tags: 
           <li ng-repeat="tag in post.tags">
             <a ng-bind="tag" ng-link="search({ queryParams: { tags: [tag]}})"></a>
