--- a/components/search/search.scss
+++ b/components/search/search.scss
@@ -9,6 +9,11 @@
       color: #333;
     }
 
+    .active {
+      color: #F80000;
+      pointer-events: none;
+    }
+
     .result-detail {
       display: block;
       width: 100%;
